--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Testing==0.4.2
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+psycopg2==2.6
 pytz==2015.4
 six==1.9.0
 SQLAlchemy==1.0.5
