--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==0.10.1
 Flask-RESTful==0.3.3
 Flask-SQLAlchemy==2.0
 Flask-Testing==0.4.2
+gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
