--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
 aniso8601==1.0.0
-blinker==1.3
 factory-boy==2.5.2
 Flask==0.10.1
 Flask-RESTful==0.3.3
 Flask-SQLAlchemy==2.0
 Flask-Testing==0.4.2
+freezegun==0.3.3
 gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 psycopg2==2.6
+python-dateutil==2.4.2
 pytz==2015.4
-requests==2.7.0
-rollbar==0.9.11
 six==1.9.0
 SQLAlchemy==1.0.5
 Werkzeug==0.10.4
-wheel==0.24.0
