--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ MarkupSafe==0.23
 psycopg2==2.6
 python-dateutil==2.4.2
 pytz==2015.4
+requests==2.7.0
+rollbar==0.9.11
 six==1.9.0
 SQLAlchemy==1.0.5
 Werkzeug==0.10.4
