--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,8 @@ psycopg2==2.6
 python-dateutil==2.4.2
 pytz==2015.4
 requests==2.7.0
-rollbar==0.9.11
+-e git://github.com/isra17/pyrollbar.git@5bd242c0f3dd8d9487fca712269a5ec95a240e5a#egg=rollbar-master
 six==1.9.0
 SQLAlchemy==1.0.5
 Werkzeug==0.10.4
+wheel==0.24.0
